# aldovale-ai-mvp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  mkdocs.yml  mypy.ini  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  response.json  runs.py
.github/workflows/: ci.yml
aldovale/: asgi.py  settings.py  urls.py  wsgi.py
aldovale_ai/: apps.py  clients.py  permissions.py  serializers.py  urls.py  views.py
aldovale_ai/tests/: test_views.py
apps/chat/: urls.py  views.py
apps/core/: authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/core/llm/: factory.py
apps/core/llm/clients/: ollama_client.py
apps/core/migrations/: 0001_initial.py
apps/core/tests/: test_auth.py  test_chat_message.py  test_factory.py  test_ollama_client.py  test_sessions.py
core/: renderes.py
docs/: api.md  architecture.md  deployment.md  devops.md  index.md  openapi-schema.yml
